--- a/config/cloudinary.yml
+++ b/config/cloudinary.yml
@@ -1,6 +1,6 @@
 production:
-  cloud_name: <%= ENV['cloud_name'] %>
-  api_key: <%= ENV['api_key'] %>
-  api_secret: <%= ENV['api_secret'] %>
-  enhance_image_tag: <%= ENV['enhance_image_tag'] %>
-  static_file_support: <%= ENV['static_file_support'] %>
+  cloud_name: <%= ENV['CLOUD_NAME'] || ENV['cloud_name'] %>
+  api_key: <%= ENV['API_KEY'] || ENV['api_key'] %>
+  api_secret: <%= ENV['API_SECRET'] || ENV['api_secret'] %>
+  enhance_image_tag: <%= ENV['ENHANCE_IMAGE_TAG'] || ENV['enhance_image_tag'] %>
+  static_file_support: <%= ENV['STATIC_FILE_SUPPORT'] || ENV['static_file_support'] %>
